testsuite/tests/th/T16133.stderr

T16133.hs:10:3: error:
    Illegal visible kind application ‘@Type’
      Perhaps you intended to use TypeApplications

T16133.hs:10:3: error:
    Illegal visible type application ‘@Int’
      Perhaps you intended to use TypeApplications
